--- a/public/html/home.html
+++ b/public/html/home.html
@@ -18,17 +18,17 @@
           <a href="#!" class="brand-logo">Podcast Engine</a>
           <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
           <ul class="right hide-on-med-and-down">
-            <li><a href="login.html"><span id="username">Login</span></a></li>
-            <li><a href="home.html">Browse</a></li>
-            <li><a href="subs.html">Subscriptions</a></li>
+            <li><a onclick="login()"><span id="username">Login</span></a></li>
+            <li><a href="home">Browse</a></li>
+            <li><a href="subs">Subscriptions</a></li>
           </ul>
         </div>
       </nav>
 
       <ul class="sidenav" id="mobile-demo">
-        <li><a href="login.html">Login</a></li>
-        <li><a href="home.html">Browse</a></li>
-        <li><a href="subs.html">Subscriptions</a></li>
+        <li><a onclick="login()">Login</a></li>
+        <li><a href="home">Browse</a></li>
+        <li><a href="subs">Subscriptions</a></li>
       </ul>
     </header>
 
@@ -46,13 +46,24 @@
         </div>
         <div class="row">
           <div class="col s12">
-            <h4 id="reporter">Search something to begin</h4>
+            <h4 id="reporter">Top 50 Podcasts</h4>
           </div>
         </div>
         <div id = "results" class="row">
-          
+
         </div>
 
+        <!--Card here for popup interaction-->
+        <div id="popup" class="card hide">
+          <div class="row">
+            <a onclick="hidePopup()"
+            class="btn-flat btn-large waves-effect waves-light">
+            <i class="material-icons">close</i></a>
+          </div>
+          <div id = "popupContent" class = "row container">
+            ayy lmao whats up
+          </div>
+        </div>
       </div>
 
     </main>
@@ -71,7 +82,7 @@
     <script type="text/javascript" src="../javascript/materialize.min.js"></script>
     <!--Our own javascript-->
     <script type="text/javascript" src="../javascript/home.js"></script>
-
+    <script type="text/javascript" src="../javascript/helper.js"></script>
 
   </body>
 </html>
