attempted to add authentication, but couldn't figure it out

--- a/public/html/subs.html
+++ b/public/html/subs.html
@@ -40,7 +40,7 @@
           </div>
         </div>
         <div id = "results" class="row">
-          <h2>You must log in first</h2>
+          <h2>Unable to log in, unauthorized</h2>
         </div>
 
         <!--Card here for popup interaction-->
